--- a/index.html
+++ b/index.html
@@ -5,14 +5,34 @@
   <title>Spēle</title>
   <link rel="stylesheet" href="stili.css">
   <script type="text/javascript" charset="UTF-8" src="main.js"></script>
+  <script type="text/javascript" charset="UTF-8" src="vgkvisi.js"></script>
  
 </head>
 <body>
-  <h1>Valstu galvaspilsētu tests</h1>
-  <hr>
-  <div id="jautajums"></div>
-  <div id="atbilzu_var"></div>
-  <div id="pogas"></div>
-  <div id="punkti"></div>
+  <h1 >Valstu galvaspilsētu tests</h1>
+ <p id="jaut">Izvēlies dotās valsts galvaspilsētu</p>
+  <p id="question"></p>
+
+  <div class="atbilzu_varianti">
+    <input name="r1" type="radio" value="5"> Atbilde1<br>
+    <input name="r1" type="radio" value="13"> Atbilde2<br>
+    <input name="r1" type="radio" value="53"> Atbilde3<br>
+    <input name="r1" type="radio" value="53"> Atbilde4<br>
+    <input name="r1" type="radio" value="53"> Atbilde5<br>
+    <input name="r1" type="radio" value="53"> Atbilde6<br>
+    <button id="poga" onclick="Parbaudit()">Atbildēt</button>
+
+
+  </div>
+
+  <hr style="margin-top: 50px">
+  <footer>
+      <p id="progress">Question x of y</p>
+  </footer>
+</div>
+</div>
+
+
+<script src="question.js"></script>
 </body>
 </html>
