--- a/index.html
+++ b/index.html
@@ -10,19 +10,23 @@
 </head>
 <body>
   <h1 >Valstu galvaspilsētu tests</h1>
+ <div id="jautajums">Izvēlies dotās valsts galvaspilsētu</div>
 
+  <div id="atbilzu_var">
     <input name="r1" type="radio" value="5"> Atbilde1<br>
     <input name="r1" type="radio" value="13"> Atbilde2<br>
     <input name="r1" type="radio" value="53"> Atbilde3<br>
     <input name="r1" type="radio" value="53"> Atbilde4<br>
     <input name="r1" type="radio" value="53"> Atbilde5<br>
     <input name="r1" type="radio" value="53"> Atbilde6<br>
+    <button class="button" onclick="Parbaudit()">Atbildēt</button>
 
 
   </div>
 
   <hr style="margin-top: 50px">
   <footer>
+      <div id="punkti">Jautājums x no y</div>
   </footer>
 </div>
 </div>
