--- a/index.html
+++ b/index.html
@@ -4,22 +4,14 @@
   <meta charset="UTF-8">
   <title>Spēle</title>
   <link rel="stylesheet" href="stili.css">
-  <script type="text/javascript" charset="UTF-8" src="main.js"></script>
   <script type="text/javascript" charset="UTF-8" src="JS/vgkvisi.js"></script>
-  <script type="text/javascript" charset="UTF-8">
-    window.onload = () => {
-      const g = new Galvaspilsetas("konteiners");
-    }
-  </script>
+  <script type="text/javascript" charset="UTF-8" src="main.js"></script>
  
 </head>
 <body>
   <h1 >Valstu galvaspilsētu tests</h1>
- <scriptt>
-   <button class="button" onclick="StartGame()">Sakt spēlēt</button>
- </scriptt> 
-
- <div id="jautajums">Izvēlies dotās valsts galvaspilsētu</div>
+<button class="button" onclick="jaunaSpele()">Sakt spēlēt</button>
+<div id="jautajums">Izvēlies dotās valsts galvaspilsētu</div>
  	
   <div id="konteiners"></div>
   
