Rāda random valstis un galvaspilsētas
Ģenerē un rāda valstis un galvaspilsētas, bet nenovāc vecās pilsētas

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <h1 >Valstu galvaspilsētu tests</h1>
 <button class="button" onclick="jaunaSpele()">Sakt spēlēt</button>
-<div id="jautajums">Izvēlies dotās valsts galvaspilsētu</div>
+<!--<div id="jautajums">Izvēlies dotās valsts galvaspilsētu</div>-->
  	
   <div id="konteiners"></div>
   
