Ielikti karogi, progresa info

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <h1 >Valstu galvaspilsētu tests</h1>
-<button class="button" onclick="jaunaSpele()">Sakt spēlēt</button>
+<button class="button" onclick="jaunaSpele()">Sākt jauno spēli!</button>
 <!--<div id="jautajums">Izvēlies dotās valsts galvaspilsētu</div>-->
  	
   <div id="konteiners"></div>
