Pamainīts dizains. Aizvākti consoles logi. FB, Youtube un Twitter iet uz JĢS

--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
 
       <div id="right-sidebar">
         <div class="browser">
-          <a href="https://www.youtube.com" target="_blank">
+          <a href="https://www.youtube.com/user/jaunogeografuskola" target="_blank">
             <img src="images/youtubelogo.jpg" alt="YouTube" />
           </a>
 
-          <a href="http://www.facebook.com" target="_blank">
+          <a href="https://www.facebook.com/pg/Jauno.geografu.skola/about/" target="_blank">
             <img src="images/facebook.png" alt="Deviantart" />
           </a>
 
-          <a href="https://www.twitter.com" target="_blank">
+          <a href="https://twitter.com/jgs_lv" target="_blank">
             <img src="images/twitterlogo.jpg" alt="Twitter" />
           </a>
         </div>
