--- a/index.html
+++ b/index.html
@@ -14,11 +14,34 @@
 
     <div id="main">
       <div id="left-sidebar">
-        <ul>
+        <form action="/login.py" method="post"><!--Par šo šaubos!!!-->
+          <div class="login">
+            <input type="text" placeholder="Lietotāja vārds" id="uname" required>        
+            <input type="password" placeholder="Parole" id="psw" required>            
+            <button class="poga" onclick="ieiet()">Ieiet</button>
+          </div>      
+        </form>
+        <button class="poga" onclick="document.getElementById('idRegistracija').style.display='block'">Reģistrēties</button>  
+
+        <div id="idRegistracija" class="modal">
+          <span onclick="document.getElementById('idRegistracija').style.display='none'" class="close" title="Close Modal">&times;</span>
+          <form class="modal-content animate"><!--action="/action_page.php" method="post">-->
+            <div class="container">
+              <input type="text" placeholder="Lietotāja vārds" id="uname_reg" required>
+              <input type="password" placeholder="Parole" id="psw_reg" required>
+              <input type="password" placeholder="Parole atkārtoti" id="psw-repeat_reg" required>  
+              <button type="submit" class="poga" onclick="registracija()">Reģistrēties</button>
+              <button type="button" class="poga" onclick="document.getElementById('idRegistracija').style.display='none'" class="cancelbtn">Atcelt</button>              
+              <p align="center">* Ja nevēlaties reģistrēties, izmantojiet&emsp;<i>Lietotāja vārds:</i><b><i>Viesis</i></b>&emsp;<i>Parole:</i><b><i>Viesis</i></b></p><br>
+            </div>        
+          </form>
+        </div>
+
+        <!--<ul>
           <li>
             <button class="poga" onclick="jaunaSpele()">Sākt spēli!</button>
           </li>
-        </ul>
+        </ul>-->
       </div>
 
       <div id="konteiners">
