--- a/index1.html
+++ b/index1.html
@@ -24,7 +24,7 @@
 
         <button class="poga" onclick="document.getElementById('idLogin').style.display='block'">Ielogoties</button>
         <button class="poga" onclick="document.getElementById('idRegistracija').style.display='block'">Reģistrēties</button>  
-        <button class="poga" onclick="jaunaSpele()">Sākt spēli bez reģistrācijas!</button>
+        <button class="poga" onclick="jaunaSpele()" title="Sākt spēli bez reģistrācijas">Sākt tagad</button>
       </div>
 
       <div id="konteiners">
@@ -69,7 +69,7 @@
           <input type="password" placeholder="Parole atkārtoti" id="psw-repeat_reg" required>  
           <button type="submit" class="poga" onclick="registracija()">Reģistrēties</button>
           <button type="button" class="poga" onclick="document.getElementById('idRegistracija').style.display='none'" class="cancelbtn">Atcelt</button>              
-          <p align="center">* Ja nevēlaties reģistrēties, izmantojiet&emsp;<i>Lietotāja vārds:</i><b><i>Viesis</i></b>&emsp;<i>Parole:</i><b><i>Viesis</i></b></p><br>
+          <!--<p align="center">* Ja nevēlaties reģistrēties, izmantojiet&emsp;<i>Lietotāja vārds:</i><b><i>Viesis</i></b>&emsp;<i>Parole:</i><b><i>Viesis</i></b></p><br>-->
         </div>        
       </form>
     </div>
