--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 
     <div id="main">
       <div id="left-sidebar">
-        <form action="/login.py" method="post"><!--Par šo šaubos!!!-->
+        <form onsubmit="return false">
           <div class="login">
             <input type="text" placeholder="Lietotāja vārds" id="uname" required>        
             <input type="password" placeholder="Parole" id="psw" required>            
-            <button class="poga" onclick="ieiet()">Ieiet</button>
+            <button class="poga" onclick="login()">Ieiet</button>
           </div>      
         </form>
         <hr>
