--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         <button class="poga" onclick="neregistrejoties()" title="Sākt spēli bez reģistrācijas">Sākt tagad</button>  
 
         <div id="idRegistracija" class="modal">
-          <span onclick="document.getElementById('idRegistracija').style.display='none'" class="close" title="Close Modal">&times;</span>
-          <form class="modal-content animate"><!--action="/action_page.php" method="post">-->
+          <!--<span onclick="document.getElementById('idRegistracija').style.display='none'" class="close" title="Close Modal">&times;</span>-->
+          <form onsubmit="return false" class="modal-content animate">
             <div class="container">
-              <input type="text" placeholder="Lietotāja vārds" id="uname_reg" required>
-              <input type="password" placeholder="Parole" id="psw_reg" required>
-              <input type="password" placeholder="Parole atkārtoti" id="psw-repeat_reg" required>  
-              <button type="submit" class="poga" onclick="registracija()">Reģistrēties</button>
+              <input type="text" placeholder="Lietotāja vārds" id="runame" required>
+              <input type="password" placeholder="Parole" id="rpsw" required>
+              <input type="password" placeholder="Parole atkārtoti" id="rpsw2" required>  
+              <button type="submit" class="poga" onclick="lgnpsscheck()">Reģistrēties</button>
               <button type="button" class="poga" onclick="document.getElementById('idRegistracija').style.display='none'" class="cancelbtn">Atcelt</button>              
               <!--<p align="center">* Ja nevēlaties reģistrēties, izmantojiet&emsp;<i>Lietotāja vārds:</i><b><i>Viesis</i></b>&emsp;<i>Parole:</i><b><i>Viesis</i></b></p><br>-->
             </div>        
