--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
           <a href="https://twitter.com/jgs_lv" target="_blank">
             <img src="images/twitterlogo.jpg" alt="Twitter" />
           </a>
+
+          {% block saturs %}
+
+          {% endblock %}
         </div>
       </div>
     </div>
