--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
 
       <div id="right-sidebar">
         <div class="browser">
+            <div id = "chat">
+            <input type="text" id="text-input">
+            <input type="button" value="Sūtīt" id="send-button">
+            </div>
+            </br>
           <a href="https://www.youtube.com/user/jaunogeografuskola" target="_blank">
             <img src="images/youtubelogo.jpg" alt="YouTube" />
           </a>
