--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="stili.css" />
     <script type="text/javascript" charset="UTF-8" src="JS/vgkvisi.js"></script>
     <script type="text/javascript" charset="UTF-8" src="main.js"></script>
+    <link href="{{ url_for('static',filename='favicon.ico')}}" rel="icon" type="image/x-icon"/>
   </head>
-  <body>
+  <body onload="lasiChatu();" class="body">
+    <script src="{{ url_for('static',filename='chats.js')}}" type="text/javascript"></script>
     <div id="header">
       <a href="index.html"><img src="images/header_img.png"/></a>
     </div>
@@ -61,10 +63,15 @@
 
       <div id="right-sidebar">
         <div class="browser">
-            <div id = "chat">
-            <input type="text" id="text-input">
-            <input type="button" value="Sūtīt" id="send-button">
-            </div>
+          <div id="chats">
+
+
+          </div>
+          
+          <div>
+              <input id="zinja" placeholder="Ievadi savu zinu!" type="text">
+              <button onclick="suutiZinju()" type="button">Sūtīt</button>
+          </div>
             </br>
           <a href="https://www.youtube.com/user/jaunogeografuskola" target="_blank">
             <img src="images/youtubelogo.jpg" alt="YouTube" />
